# codingqs

./: .gitignore  README.md
c_programming/: hello.c  mergesort.c  test
cpp/: Makefile  a.out  decoder.cpp  halfsquare  hexConverter.cpp  luhn.cpp  luhnCheckSum.cpp  numconv.cpp  shakespeare.txt  shapes.cpp  sieveOfEratosthenes.cpp  sort.cpp
cpp/atcoder/: atcoder  coins.cpp  practiceA.cc  shift_only.cpp
cpp/atcoder/20250419_abc/: problem1.cpp
cpp/atcoder/20250427_abc/: na.cc
cpp/atcoder/20250524_abc/: security2.cc
cpp/atcoder/20250531_abc/: template.txt  timeout.cc
cpp/atcoder/Nathalie/: Nathalie.cc
cpp/atcoder/algorithm_templates/: beginner.cc
cpp/atcoder/beginner/: cardGame.cc  daydream.cc  g1.cc  kagamiMochi.cc  kagamiMochiBucket.cc  kagamiMochiSet.cc  otoshidama.cc  otoshidamaImproved.cc  reverseproxy.cc  rotatablearray.cc  someSums.cpp  sortedArray.cc  travelling.cc
cpp/atcoder/contests/: autoCC.sh
cpp/atcoder/effortfulLearning/: 20250620_C_abc400_C_exponentsAB.cc  20251625_abc404_cyclegraph.cc  autoCC.sh  change.sh  example.cc
cpp/recursion/: concat.cpp  detectPalindrome.cpp  product.cpp  reverseString.cpp  summingNums.cpp
cpp/thinkLikeAProgrammer/: 10digitIsbn.cpp  converter.cpp  decimaltobinary.cpp  decoder.cpp  lineStat.cpp  linkedString.cc  stream2.cpp
cpp/thinkLikeAProgrammer/my_project/: CMakeLists.txt  \  hello_test.cc
cpp/thinkLikeAProgrammer/my_project/include/: customString.h  recordCollection.h
cpp/thinkLikeAProgrammer/my_project/src/: \  customString.cpp  recordCollection.cpp
cpp/thinkLikeAProgrammer/my_project/tests/: test_customString.cpp  test_recordCollection.cpp
(+174 files in other folders)
